Updated image URL

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://github.com/davidwu92/spiderman.git" alt="spiderman">
+    <img src="https://i.kym-cdn.com/entries/icons/original/000/012/781/upload.png" alt="spiderman">
 </body>
 </html>
